# pdp11-emulator

./: .gitignore  .gitmodules  AddressingModes_8c__incl.map  AddressingModes_8h__dep__incl.map  AddressingModes_8h__incl.map  ArgumentParsers_8h__dep__incl.map  ArgumentParsers_8h_source.html  ArgumentType_8h.html  ArgumentType_8h__dep__incl.map  ArgumentType_8h__dep__incl.md5  ArgumentType_8h__incl.map  ArgumentType_8h_source.html  CException_8h_source.html  CMakeLists.txt  CommandType_8h__dep__incl.map  CommandType_8h__incl.map  CommandType_8h__incl.md5  Commands_8c.html  Commands_8c__incl.md5  Commands_8h.html  Commands_8h__dep__incl.map  Commands_8h__dep__incl.md5  Defs_8h.html  Defs_8h__dep__incl.md5  EmulatorConstants_8h__dep__incl.map  LICENSE  LICENSE_8txt.html  MemConstants_8h__incl.map  MemConstants_8h__incl.md5  Memory_8c.html  Memory_8h__dep__incl.map  Memory_8h__incl.md5  Memory__tests_8c.html  Memory__tests_8c__incl.map  Memory__tests_8c__incl.md5  MesonGeneratorRunner_8md.html  ModeType_8h__dep__incl.map  ModeType_8h__incl.map  PdpEmulator_8c.html  PdpEmulator_8c__incl.map  (+349 more)
.github/workflows/: cmake.yml
docs/: Doxyfile  TechnicalTask.md  TechnicalTask.rtf
docs/html/: AddressingModes_8c.html  AddressingModes_8c__incl.md5  AddressingModes_8h.html  AddressingModes_8h__dep__incl.md5  AddressingModes_8h__incl.md5  AddressingModes_8h_source.html  AllTests_8c.html  AllTests_8c__incl.map  AllTests_8c__incl.md5  ArgConstants_8h.html  ArgConstants_8h__dep__incl.map  ArgConstants_8h__dep__incl.md5  ArgConstants_8h_source.html  ArgumentParserType_8h.html  ArgumentParserType_8h__dep__incl.map  ArgumentParserType_8h__dep__incl.md5  ArgumentParserType_8h__incl.map  ArgumentParserType_8h__incl.md5  ArgumentParserType_8h_source.html  ArgumentParsers_8c.html  ArgumentParsers_8c__incl.map  ArgumentParsers_8c__incl.md5  ArgumentParsers_8h.html  ArgumentParsers_8h__dep__incl.md5  ArgumentParsers_8h__incl.map  ArgumentParsers_8h__incl.md5  ArgumentType_8h__incl.md5  CException_8h.html  CException_8h__dep__incl.map  CException_8h__dep__incl.md5  (+370 more)
search/: all_0.js  all_10.js  all_12.js  all_13.js  all_14.js  all_16.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_a.js  all_c.js  all_d.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  defines_0.js  defines_11.js  defines_2.js  defines_3.js  defines_7.js  defines_9.js  defines_a.js  defines_d.js  enums_1.js  enumvalues_3.js  enumvalues_6.js  files_0.js  files_3.js  files_4.js  files_5.js  files_7.js  files_9.js  files_a.js  functions_10.js  functions_11.js  functions_2.js  functions_6.js  (+24 more)
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/constants/: ArgConstants.h  EmulatorConstants.h  MemConstants.h
src/common/types/: ArgumentParserType.h  ArgumentType.h  CommandType.h  ModeType.h  TracerType.h
src/core/: CMakeLists.txt
src/core/addressing_modes/: AddressingModes.c  AddressingModes.h
src/core/argument_parsers/: ArgumentParsers.c  ArgumentParsers.h
src/core/commands/: Commands.c  Commands.h
src/core/configs/: StartupConfig.c  StartupConfig.h
src/core/memory/: Memory.c  Memory.h
src/core/pdp_emulator/: PdpEmulator.c  PdpEmulator.h
src/core/process_state/: ProcessState.c  ProcessState.h
src/core/tracer/: Tracer.c  Tracer.h
src/utils/: CMakeLists.txt
tests/: CMakeLists.txt
(+64 files in other folders)
